# sessionizer

./: Cargo.toml  LICENSE  README.md
src/: config_entry.rs  lib.rs  main.rs  prompt.rs  prompt_item.rs  utils.rs
src/config/: args.rs  file_config.rs  mod.rs
src/tmux/: executor.rs  mod.rs
tests/: config_entry.rs
