[package]
name = "tmux_sessionizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "string"] }
serde = { version = "1.0.164", features = ["derive"] }
skim = "0.10.4"
toml = "0.7.5"

[[bin]]
name = "tms"
path = "src/main.rs"
